fix mobile overflow

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -105,6 +105,7 @@
   .about__cards {
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
+    width: 100%;
   }
 
   .about__content {
@@ -112,7 +113,11 @@
   }
 
   .about__content p {
-    margin: 1.5rem 0;
+    /* margin: 1.5rem 0; */
+    text-align: center;
+    padding: 0 1rem;
+    word-break: break-word;
+    overflow-wrap: break-word;
   }
 }
 
